--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "author": "Grafana",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@grafana/data": "latest",
-    "@grafana/toolkit": "latest",
-    "@grafana/runtime": "latest",
-    "@grafana/ui": "latest",
-    "@types/lodash": "latest"
+    "@grafana/data": "8.0.3",
+    "@grafana/toolkit": "8.0.3",
+    "@grafana/runtime": "8.0.3",
+    "@grafana/ui": "8.0.3",
+    "@types/lodash": "latest",
+    "tslib": "2.2.0"
   },
   "resolutions": {
     "rxjs": "6.6.3"
