--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "grafana-simracing-telemetry-datasource",
-  "version": "1.0.0",
+  "name": "grafana-simracing-telemetry",
+  "version": "1.0.0-beta.1",
   "description": "Plugin for fetching telemetry data from simracing titles",
   "scripts": {
     "build": "grafana-toolkit plugin:build",
