Fix dashboards provisioning

--- a/conf/dashboards.yaml
+++ b/conf/dashboards.yaml
@@ -9,3 +9,13 @@ providers:
     updateIntervalSeconds: 60
     options:
       path: data/plugins/alexanderzobnin-simracingtelemetry-datasource/dashboards
+
+  # If grafana-server run from bin folder
+  - name: 'Simracing telemetry dashboards backup'
+      folder: ''
+      folderUid: ''
+      type: file
+      allowUiUpdates: true
+      updateIntervalSeconds: 60
+      options:
+        path: ../data/plugins/alexanderzobnin-simracingtelemetry-datasource/dashboards
